VS ApexCode/UlbergProject0/force-app/main/default/objects/Rating__c/fields/Previously_Sold_Item__c.field-meta.xml
<CustomField>
    <fullName>Previously_Sold_Item__c</fullName>
    <label>Previously Sold Item</label>
    <referenceTo>Previously_Sold_Item__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>