VS ApexCode/UlbergProject0/force-app/main/default/objects/Rating__c/fields/Rating_of_item__c.field-meta.xml
<CustomField>
    <fullName>Rating_of_item__c</fullName>
    <description>1-10 scale 10 being a perfect review</description>
    <label>Rating of item</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>