VS ApexCode/UlbergProject0/force-app/main/default/objects/Rating__c/validationRules/Must_Be_Sold_By_contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Be_Sold_By_contact</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Contact__c  =    Previously_Sold_Item__r.Contact__r.Id  , false, true)</errorConditionFormula>
    <errorDisplayField>Previously_Sold_Item__c</errorDisplayField>
    <errorMessage>Item must be sold by the contact listed</errorMessage>
</ValidationRule>